#54 submit button gap fix on invoice add/edit

--- a/styles/newInvoice.module.scss
+++ b/styles/newInvoice.module.scss
@@ -392,13 +392,18 @@
                     font-weight: 600;
                     font-size: 14px;
                     color: var.$white;
-                    margin-right: 11px;
                 }
 
-                .companyInvoiceSaveButtonsWrapper {
+                .companyInvoiceButtonsWrapper {
+
+                    .companyInvoiceSubmitButtonsWrapper {
+                        margin-left: 0;
+                    }
 
                     .companyInvoiceSaveDraftButton,
-                    .companyInvoiceSavenSendButton {
+                    .companyInvoiceSaveSendButton {
+                        width: auto;
+
                         span {
                             display: flex;
                             text-align: center;
@@ -410,8 +415,8 @@
                                 align-self: center;
 
                                 svg {
-                                    height: 20px;
-                                    width: 20px;
+                                        height: 20px;
+                                        width: 20px;
                                 }
                             }
                         }
@@ -419,6 +424,8 @@
                 }
 
                 .companyInvoiceCancelButton {
+                    width: auto;
+
                     span {
                         display: flex;
                         text-align: center;
@@ -820,12 +827,17 @@
 
                 }
 
-                .companyInvoiceSaveButtonsWrapper {
+                .companyInvoiceButtonsWrapper {
                     margin-bottom: 21px;
                     font-size: 14px;
 
+                    .companyInvoiceSubmitButtonsWrapper {
+                        margin-left: 0;
+                    }
+                    
                     .companyInvoiceSaveDraftButton,
-                    .companyInvoiceSavenSendButton {
+                    .companyInvoiceSaveSendButton {
+                        width: 46%;
                         span {
                             display: flex;
                             text-align: center;
